# nrf7002-test

./: Cargo.toml
.cargo/: config.toml
src/: main.rs  nrf_wifi.rs  wifi_bus.rs
