[package]
name = "nrf7002-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = "0.3.0"
nrf5340-app-pac = "0.12.2"

embassy-executor = { version = "0.1.1", features = ["nightly", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["nightly"] }
embassy-nrf = { version = "0", features = ["nightly", "nrf5340-app-s", "unstable-pac", "time-driver-rtc1", "defmt", "unstable-traits", "time", "gpiote"] }
embassy-sync = { version = "0.1.0", features = ["nightly"] }
embassy-futures = "0.1.0"

nrf700x-bindings = { path = "../nrf700x-bindings" }

linked_list_allocator = { version = "0.10.4", default-features = false, features = ["const_mut_refs"] }
critical-section = "1.1.1"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "b05cd77" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "b05cd77" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "b05cd77" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "b05cd77" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "b05cd77" }


[profile.release]
debug = true
lto = true
